---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Changes:
    - Added some warning messages when trying to open items/recipes in FNEI/WIIRUF/RB fails
    - Changed the unit that pollution is displayed in from P/second to P/minute
    - Changed how deleting subfactories and recipe lines work, removing the confirmation step
    - Changing machines on recipes now also opens up a dialog instead of presenting the choices in-line; An alternative to this is shift/ctrl-clicking the machine to up/downgrade it
    - Removed the 'Indicate rounding' mod setting
    - Removed the actionbar delete-button; ctrl-right-click or the delete button when editing the subfactory still work
  Bugfixes:
    - Fixed an issue where exporting subfactories would not preserve line order properly
    - Fixed some minor graphical issues with the new import/export dialogs
    - Fixed that pollution calculation was off by a factor of 60
    - Fixed an issue where a recipe line wasn't properly deleted under certain circumstances

---------------------------------------------------------------------------------------------------
Version: 0.18.44
Date: 27. 07. 2020
  Features:
    - This update (finally) brings with it the ability to import/export your subfactories! It works similarly to exporting blueprints, which means that it gives you a 'factory exchange string' that you can share with others or use yourself to import your plans in a different save.

---------------------------------------------------------------------------------------------------
Version: 0.18.43
Date: 26. 07. 2020
  Bugfixes:
    - Implement potential fix for a crash when duplicating certain subfactories
    - Fixed that moving list items to the bottom/top did not work correctly

---------------------------------------------------------------------------------------------------
Version: 0.18.42
Date: 21. 07. 2020
  Features: